// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BranchOverride Component can add additional styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
  background: blue;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component can add additional styles when default styles are disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: blue;
}

<div
    class="ss__branch-override ss__branch-override--light emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon"
          height="12px"
          viewBox="0 0 56 56"
          width="12px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
            fill="#515151"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component can be collapsed and uncollapsed 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component can be collapsed and uncollapsed 2`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light ss__branch-override--collapsed emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component can be collapsed and uncollapsed 3`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component can disable styles 1`] = `
<DocumentFragment>
  <div
    class="ss__branch-override ss__branch-override--light"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon"
          height="12px"
          viewBox="0 0 56 56"
          width="12px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
            fill="#515151"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component can set dark mode 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(59, 35, 173, 0.9);
  color: #fff;
  border: 0;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: #4c3ce2 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  background: rgba(59, 35, 173, 0.3);
  border-bottom: 1px solid #4c3de1;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #fff;
  color: #fff;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #03cee1;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #03cee1;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #fff;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--dark emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring_light.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component component theming works is themeable with ThemeProvider 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light classy emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component component theming works is themeable with theme prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light classy emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component component theming works the theme prop overrides ThemeProvider 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light classy emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component displays branch bundle details 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component displays branch failure on bad branch 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(130, 6, 6, 0.9);
  color: #fff;
  border: 0;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(130, 6, 6, 0.4) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  background: rgba(130, 6, 6, 0.3);
  border-bottom: 1px solid #760000;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #fff;
  color: #fff;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #be9628;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #be9628;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #fff;
  width: 12px;
  height: 12px;
  position: relative;
}

.emotion-2 {
  fill: #be9628;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--error emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring_light.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        REMOVE
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        <svg
          class="ss__icon ss__icon--warn ss__branch-override__bottom__left__icon emotion-2"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M31.2981 5.28228C29.8323 2.74341 26.1677 2.74341 24.7019 5.28228L0.515899 47.1737C-0.94992 49.7126 0.88235 52.8861 3.81399 52.8861H52.186C55.1176 52.8861 56.9499 49.7126 55.4841 47.1737L31.2981 5.28228ZM25.2229 35.0037L24.8264 18.837C24.8264 18.655 24.8923 18.4729 25.047 18.3686C25.1794 18.2387 25.3776 18.1601 25.5759 18.1601H30.4241C30.6223 18.1601 30.8206 18.238 30.953 18.3686C31.1071 18.4729 31.1736 18.655 31.1736 18.837L30.7988 35.0037C30.7988 35.3679 30.4682 35.6542 30.0493 35.6542H25.9724C25.5759 35.6542 25.2453 35.3679 25.2229 35.0037ZM25.1788 43.9593V39.0131C25.1788 38.5447 25.487 38.1541 25.8618 38.1541H30.0929C30.4894 38.1541 30.82 38.5447 30.82 39.0131V43.9593C30.82 44.4277 30.4894 44.8183 30.0929 44.8183H25.8618C25.487 44.8183 25.1788 44.4277 25.1788 43.9593Z"
          />
        </svg>
        <span>
          Branch not found...
        </span>
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        badBranch
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Unable to find the branch.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component displays branch failure when both 'error' and 'details' props are provided 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(130, 6, 6, 0.9);
  color: #fff;
  border: 0;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(130, 6, 6, 0.4) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  background: rgba(130, 6, 6, 0.3);
  border-bottom: 1px solid #760000;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #fff;
  color: #fff;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #be9628;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #be9628;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #fff;
  width: 12px;
  height: 12px;
  position: relative;
}

.emotion-2 {
  fill: #be9628;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--error emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring_light.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        REMOVE
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        <svg
          class="ss__icon ss__icon--warn ss__branch-override__bottom__left__icon emotion-2"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M31.2981 5.28228C29.8323 2.74341 26.1677 2.74341 24.7019 5.28228L0.515899 47.1737C-0.94992 49.7126 0.88235 52.8861 3.81399 52.8861H52.186C55.1176 52.8861 56.9499 49.7126 55.4841 47.1737L31.2981 5.28228ZM25.2229 35.0037L24.8264 18.837C24.8264 18.655 24.8923 18.4729 25.047 18.3686C25.1794 18.2387 25.3776 18.1601 25.5759 18.1601H30.4241C30.6223 18.1601 30.8206 18.238 30.953 18.3686C31.1071 18.4729 31.1736 18.655 31.1736 18.837L30.7988 35.0037C30.7988 35.3679 30.4682 35.6542 30.0493 35.6542H25.9724C25.5759 35.6542 25.2453 35.3679 25.2229 35.0037ZM25.1788 43.9593V39.0131C25.1788 38.5447 25.487 38.1541 25.8618 38.1541H30.0929C30.4894 38.1541 30.82 38.5447 30.82 39.0131V43.9593C30.82 44.4277 30.4894 44.8183 30.0929 44.8183H25.8618C25.487 44.8183 25.1788 44.4277 25.1788 43.9593Z"
          />
        </svg>
        <span>
          Branch not found...
        </span>
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        branch
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Unable to find the branch.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component has a remove button that calls 'onRemove' 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component has a remove button that calls 'onRemove' 2`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component renders with classname 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light classy emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BranchOverride Component uses bocachica theme 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 360px;
  height: 120px;
  overflow: hidden;
  font-size: 14px;
  position: fixed;
  z-index: 9999;
  cursor: auto;
  bottom: 50px;
  right: 0;
  background: rgba(255, 255, 255, 0.95);
  color: #515151;
  border: 1px solid #ccc;
  border-right: 0;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  box-shadow: rgba(81, 81, 81, 0.5) 1px 1px 3px 0px;
  -webkit-transition: height ease 0.2s,right ease 0.5s 0.2s;
  transition: height ease 0.2s,right ease 0.5s 0.2s;
}

.emotion-0.ss__branch-override--collapsed {
  -webkit-transition: height ease 0.5s 0.5s,right ease 0.5s;
  transition: height ease 0.5s 0.5s,right ease 0.5s;
  right: -316px;
  height: 50px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top {
  padding: 10px;
  border-bottom: 1px solid #ccc;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__logo {
  display: inline-block;
  height: 30px;
  max-height: 30px;
  vertical-align: middle;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__collapse {
  display: inline-block;
  float: right;
  padding: 5px;
  cursor: pointer;
}

.emotion-0 .ss__branch-override__top .ss__branch-override__top__button {
  border-radius: 5px;
  padding: 6px;
  height: 100%;
  line-height: 14px;
  text-align: center;
  cursor: pointer;
  font-size: 10px;
  border: 1px solid #515151;
  color: #515151;
  float: right;
  margin-right: 14px;
}

.emotion-0 .ss__branch-override__bottom {
  padding: 10px 15px;
  font-size: 12px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left {
  font-weight: bold;
  font-style: italic;
  color: #3a23ad;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 180px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__left svg {
  margin-right: 10px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__right {
  float: right;
  font-style: italic;
  color: #3a23ad;
  font-size: 12px;
  line-height: 20px;
}

.emotion-0 .ss__branch-override__bottom .ss__branch-override__bottom__content {
  margin-top: 10px;
}

.emotion-1 {
  fill: #515151;
  width: 12px;
  height: 12px;
  position: relative;
}

<div
    class="ss__branch-override ss__branch-override--light emotion-0"
  >
    <div
      class="ss__branch-override__top"
    >
      <img
        class="ss__branch-override__top__logo"
        src="https://snapui.searchspring.io/searchspring.svg"
      />
      <div
        class="ss__branch-override__top__collapse"
      >
        <svg
          class="ss__icon ss__icon--close-thin ss__branch-override__bottom__left__icon emotion-1"
          viewBox="0 0 56 56"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M56 5.638l-22.362 22.362 22.362 22.362-5.638 5.638-22.362-22.362-22.362 22.362-5.638-5.638 22.362-22.362-22.362-22.362 5.638-5.638 22.362 22.362 22.362-22.362z"
          />
        </svg>
      </div>
      <div
        class="ss__branch-override__top__button"
      >
        STOP PREVIEW
      </div>
    </div>
    <div
      class="ss__branch-override__bottom"
    >
      <span
        class="ss__branch-override__bottom__left"
      >
        branch
      </span>
      <span
        class="ss__branch-override__bottom__right"
      >
        07 Jan 2022 22:42:39 GMT
      </span>
      <div
        class="ss__branch-override__bottom__content"
      >
        Preview functionality may differ from production.
      </div>
    </div>
  </div>
</DocumentFragment>
`;
